<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_top_round">

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_favorite"/>

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tv_runtime"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:background="@color/gray"/>

    <View
        android:id="@+id/view"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_circle"
        app:layout_constraintBottom_toBottomOf="@id/tv_release_date"
        app:layout_constraintEnd_toStartOf="@+id/tv_runtime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_release_date"
        app:layout_constraintTop_toTopOf="@id/tv_release_date" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/liear_layout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/liear_layout2"
        app:layout_constraintEnd_toEndOf="@+id/liear_layout2"
        app:layout_constraintStart_toStartOf="@+id/liear_layout2"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        app:layout_constraintVertical_bias="0.01999998"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_stars"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/gray"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/liear_layout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liear_layout1">

        <TextView
            android:id="@+id/tv_rating_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_people"
            android:background="@color/gray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/gray"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/chip_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/liear_layout2">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            style="@style/Widget.MaterialComponents.ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/img_card_view"
        android:layout_width="136dp"
        android:layout_height="184dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_container">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_film_poster"
            android:background="@color/gray" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="16sp"
        app:layout_constraintStart_toEndOf="@id/img_card_view"
        app:layout_constraintTop_toTopOf="@id/img_card_view"/>

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:scrollbars="vertical"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/img_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview"
        app:layout_constraintStart_toEndOf="@id/img_card_view"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tv_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/cast"
        app:layout_constraintStart_toStartOf="@id/img_card_view"
        app:layout_constraintTop_toBottomOf="@id/img_card_view"/>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cast">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <include layout="@layout/item_film_placeholder"/>
            <include layout="@layout/item_film_placeholder"/>
            <include layout="@layout/item_film_placeholder"/>
            <include layout="@layout/item_film_placeholder"/>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>